Изменил наименования команд в квартирографии

--- a/АР.tab/Квартирография.panel/Нумератор по линии.pushbutton/bundle.yaml
+++ b/АР.tab/Квартирография.panel/Нумератор по линии.pushbutton/bundle.yaml
@@ -1,6 +1,12 @@
 title:
-  ru: "Нумератор по линии"
-  en_us: "Numbering by line"
+  ru: >-
+    Нумератор
+    
+    по линии
+  en_us: >-
+    Numbering
+    
+    by line
 
 tooltip:
   ru: Нумерует помещения и паркинг по выделенной линии.
