--- a/АР.tab/Квартирография.panel/Нумератор помещений и групп.invokebutton/bundle.yaml
+++ b/АР.tab/Квартирография.panel/Нумератор помещений и групп.invokebutton/bundle.yaml
@@ -1,6 +1,12 @@
 title:
-  ru: "Нумератор\nпомещений и групп"
-  en_us: "Room and group\nnumbering"
+  ru: >-
+    Нумератор
+    
+    помещений и групп
+  en_us: >-
+    Numbering
+    
+    room and group
 
 tooltip:
   ru: Нумерует помещения в пределах подгрупп по заранее определенному порядку наименований помещений.
