Обновлена структура кнопок на панели квартирографии

--- a/АР.tab/Квартирография.panel/bundle.yaml
+++ b/АР.tab/Квартирография.panel/bundle.yaml
@@ -1,5 +1,4 @@
 layout:
   - Квартирография Стадии П
-  - Нумератор по линии
-  - Нумератор по диагонали
-  - Нумератор помещений и групп
+  - Нумераторы
+  - Помещения
