Добавлен скрипт для заморозки площадей

--- a/АР.tab/Квартирография.panel/Помещения.pulldown/bundle.yaml
+++ b/АР.tab/Квартирография.panel/Помещения.pulldown/bundle.yaml
@@ -1,3 +1,5 @@
 layout:
   - Добавить новое наименование
+  - Удалить неиспользуемые наименования
   - Проверка контуров помещений
+  - Заморозка площадей
