Обновил описание скрипта по ВОР по кладке

--- a/АР.tab/ВОР.panel/ВОР Кладка.invokebutton/bundle.yaml
+++ b/АР.tab/ВОР.panel/ВОР Кладка.invokebutton/bundle.yaml
@@ -6,10 +6,30 @@ title:
   en_us: Volume Of Work
 
 tooltip:
-  ru: В параметры стен записывает информацию о помещениях, для которых является границей.
+  ru: >-
+    В параметры стен записывает информацию о помещениях, для которых является границей.
+    
+    В стенах на выбранных уровнях заполняет список параметров на основе помещений, 
+    для которых данные стены являются границами.
+    
+
+    Параметры стен - параметры помещений:
+    
+    Имя помещения - Имя
+    
+    Номер помещения - Номер
+    
+    ID помещения - ID элемента
+    
+    Номер квартиры - ФОП_Номер квартиры
+
+
+    При запуске скрипта можно очистить эти параметры у всех обрабатываемых стен, 
+    если поставить соответствующую галочку при запуске. Время выполнения скрипта при этом увеличится.
   en_us: Sets wall parameters with rooms information, bounded by this wall.
 
 assembly: RevitVolumeOfWork.dll
 command_class: RevitVolumeOfWorkCommand
 
 author: sssenya
+help_url: "https://kb.a101.ru/pages/viewpage.action?pageId=110564557"
