--- a/АР.tab/ВОР.panel/ВОР Кладка.invokebutton/bundle.yaml
+++ b/АР.tab/ВОР.panel/ВОР Кладка.invokebutton/bundle.yaml
@@ -21,7 +21,7 @@ tooltip:
     
     ID помещения - ID элемента
     
-    Номер квартиры - ФОП_Номер квартиры
+    Группа помещения - КВГ_Группа
 
 
     При запуске скрипта можно очистить эти параметры у всех обрабатываемых стен, 
