Обновлены файлы bundle для AR.tab

--- a/АР.tab/ВОР.panel/ВОР Кладка.invokebutton/bundle.yaml
+++ b/АР.tab/ВОР.panel/ВОР Кладка.invokebutton/bundle.yaml
@@ -33,3 +33,6 @@ command_class: RevitVolumeOfWorkCommand
 
 author: sssenya
 help_url: "https://kb.a101.ru/pages/viewpage.action?pageId=110564557"
+
+min_revit_version: 2020
+max_revit_version: 2022
