--- a/АР.tab/Квартирография.panel/Нумераторы.pulldown/Нумератор по линии.pushbutton/bundle.yaml
+++ b/АР.tab/Квартирография.panel/Нумераторы.pulldown/Нумератор по линии.pushbutton/bundle.yaml
@@ -13,3 +13,6 @@ tooltip:
   en_us: Numbers rooms and parking according to the selected line.
 
 author: dosymep
+
+min_revit_version: 2020
+max_revit_version: 2022
