--- a/АР.tab/Перемычки.panel/Перемычки.stack/Настройки.invokebutton/bundle.yaml
+++ b/АР.tab/Перемычки.panel/Перемычки.stack/Настройки.invokebutton/bundle.yaml
@@ -8,3 +8,6 @@ tooltip:
 
 assembly: RevitLintelPlacement.dll
 command_class: ConfigurateLintelPluginCommand
+
+min_revit_version: 2020
+max_revit_version: 2022
