--- a/АР.tab/Прочее.panel/other.stack/Прочее.pulldown/Создание архитектурной документации.invokebutton/bundle.yaml
+++ b/АР.tab/Прочее.panel/other.stack/Прочее.pulldown/Создание архитектурной документации.invokebutton/bundle.yaml
@@ -8,3 +8,6 @@ tooltip:
 
 assembly: RevitArchitecturalDocumentation.dll
 command_class: RevitArchitecturalDocumentationCommand
+
+min_revit_version: 2020
+max_revit_version: 2022
