--- a/АР.tab/Установки.panel/настройки.stack/Настройки.pushbutton/bundle.yaml
+++ b/АР.tab/Установки.panel/настройки.stack/Настройки.pushbutton/bundle.yaml
@@ -9,3 +9,6 @@ tooltip:
 author: dosymep
 context: zero-doc
 help_url: "https://kb.a101.ru/pages/viewpage.action?pageId=67829987"
+
+min_revit_version: 2020
+max_revit_version: 2024
