Изменен файл bundle.yaml плагина RevitArchitecturalDocumentation

--- a/АР.tab/Прочее.panel/other.stack/Прочее.pulldown/Создание архитектурной документации.invokebutton/bundle.yaml
+++ b/АР.tab/Прочее.panel/other.stack/Прочее.pulldown/Создание архитектурной документации.invokebutton/bundle.yaml
@@ -9,5 +9,7 @@ tooltip:
 assembly: RevitArchitecturalDocumentation.dll
 command_class: RevitArchitecturalDocumentationCommand
 
+author: DivinN
+
 min_revit_version: 2020
 max_revit_version: 2024
