Переименованы скрипты на вкладке АР

--- a/АР.tab/Прочее.panel/Прочее.pulldown/Создать архитектурную документацию.invokebutton/bundle.yaml
+++ b/АР.tab/Прочее.panel/Прочее.pulldown/Создать архитектурную документацию.invokebutton/bundle.yaml
@@ -1,5 +1,5 @@
 title:
-  ru: Создание архитектурной документации
+  ru: Создать архитектурную документацию
   en_us: RevitArchitecturalDocumentation
 
 tooltip:
