--- a/АР.tab/Квартирография.panel/Помещения.pulldown/bundle.yaml
+++ b/АР.tab/Квартирография.panel/Помещения.pulldown/bundle.yaml
@@ -1,5 +1,5 @@
 layout:
   - Добавить новое наименование
   - Удалить неиспользуемые наименования
-  - Проверка контуров помещений
+  - Проверить контуры помещений
   - Заморозка площадей
