--- a/АР.tab/Рабочие наборы.panel/КЖ Скрыть ненужные.pushbutton/bundle.yaml
+++ b/АР.tab/Рабочие наборы.panel/КЖ Скрыть ненужные.pushbutton/bundle.yaml
@@ -9,6 +9,7 @@ tooltip:
   en_us: Close worksets with reinforcement from KR links with reinforcement.
 
 author: vlastroG
+help_url: "https://kb.a101.ru/pages/viewpage.action?pageId=116067966"
 
 min_revit_version: 2020
 max_revit_version: 2024
