--- a/АР.tab/Квартирография.panel/Помещения.pulldown/bundle.yaml
+++ b/АР.tab/Квартирография.panel/Помещения.pulldown/bundle.yaml
@@ -1,5 +1,6 @@
 layout:
   - Добавить новое наименование
   - Удалить неиспользуемые наименования
+  - Маркировать помещения
   - Проверить контуры помещений
   - Заморозка площадей
