Выложена новая версия скрипта для маркировки помещений

--- a/АР.tab/Квартирография.panel/Помещения.pulldown/Маркировать помещения.invokebutton/bundle.yaml
+++ b/АР.tab/Квартирография.panel/Помещения.pulldown/Маркировать помещения.invokebutton/bundle.yaml
@@ -6,7 +6,7 @@ tooltip:
   ru: >- 
     Размещает марки для помещений на открытом виде.
     
-    Марки размещаются на помещениях из открытого проекта и на помеещниях из связанных файлов.
+    Марки размещаются на помещениях из открытого проекта и на помещениях из связанных файлов.
   en_us: >- 
     Places room tags on active view.
     
