Создал кнопку Удалить марки Подгрузил .dll плагина RevitRemoveRoomTags, картинки, настроил bundle

--- a/АР.tab/Квартирография.panel/Помещения.pulldown/bundle.yaml
+++ b/АР.tab/Квартирография.panel/Помещения.pulldown/bundle.yaml
@@ -2,5 +2,6 @@ layout:
   - Добавить новое наименование
   - Удалить неиспользуемые наименования
   - Маркировать помещения
+  - Удалить марки
   - Проверить контуры помещений
   - Заморозка площадей
