--- a/АР.tab/РД.panel/Отделка пола.pushbutton/bundle.yaml
+++ b/АР.tab/РД.panel/Отделка пола.pushbutton/bundle.yaml
@@ -11,6 +11,7 @@ tooltip:
 context: active-floor-plan
 
 author: DiBrainz
+help_url: "https://wiki.a101.ru/pages/viewpage.action?pageId=9210991"
 
 min_revit_version: 2020
 max_revit_version: 2024
