--- a/АР.tab/ВОР.panel/ВОР Кладка.invokebutton/bundle.yaml
+++ b/АР.tab/ВОР.panel/ВОР Кладка.invokebutton/bundle.yaml
@@ -32,7 +32,7 @@ assembly: RevitVolumeOfWork.dll
 command_class: RevitVolumeOfWorkCommand
 
 author: sssenya
-help_url: "https://kb.a101.ru/pages/viewpage.action?pageId=110564557"
+help_url: "https://wiki.a101.ru/pages/viewpage.action?pageId=9210849"
 
 min_revit_version: 2020
 max_revit_version: 2024
