--- a/АР.tab/Квартирография.panel/Квартирография Стадии П.invokebutton/bundle.yaml
+++ b/АР.tab/Квартирография.panel/Квартирография Стадии П.invokebutton/bundle.yaml
@@ -13,6 +13,7 @@ assembly: RevitRooms.dll
 command_class: RoomsCommand
 
 author: dosymep
+help_url: "https://wiki.a101.ru/pages/viewpage.action?pageId=9210796"
 
 min_revit_version: 2020
 max_revit_version: 2024
