--- a/АР.tab/Квартирография.panel/Помещения.pulldown/Маркировать помещения.invokebutton/bundle.yaml
+++ b/АР.tab/Квартирография.panel/Помещения.pulldown/Маркировать помещения.invokebutton/bundle.yaml
@@ -12,5 +12,8 @@ tooltip:
     
     Places tags for rooms from an active document and for rooms from links.
 
+author: sssenya
+help_url: "https://wiki.a101.ru/pages/viewpage.action?pageId=9210796"
+
 assembly: RevitRoomTagPlacement.dll
 command_class: RevitRoomTagPlacementCommand
