--- a/АР.tab/Квартирография.panel/Помещения.pulldown/Проверить контуры помещений.pushbutton/bundle.yaml
+++ b/АР.tab/Квартирография.panel/Помещения.pulldown/Проверить контуры помещений.pushbutton/bundle.yaml
@@ -21,6 +21,7 @@ tooltip:
   
 
 author: sssenya
+help_url: "https://wiki.a101.ru/pages/viewpage.action?pageId=9210796"
 
 min_revit_version: 2020
 max_revit_version: 2024
