--- a/АР.tab/Квартирография.panel/Помещения.pulldown/Удалить марки.invokebutton/bundle.yaml
+++ b/АР.tab/Квартирография.panel/Помещения.pulldown/Удалить марки.invokebutton/bundle.yaml
@@ -10,6 +10,7 @@ assembly: RevitRemoveRoomTags.dll
 command_class: RevitRemoveRoomTagsCommand
 
 author: DivinN
+help_url: "https://wiki.a101.ru/pages/viewpage.action?pageId=9210796"
 
 min_revit_version: 2020
 max_revit_version: 2024
