--- a/АР.tab/Квартирография.panel/Помещения.pulldown/Удалить неиспользуемые наименования.pushbutton/bundle.yaml
+++ b/АР.tab/Квартирография.panel/Помещения.pulldown/Удалить неиспользуемые наименования.pushbutton/bundle.yaml
@@ -7,6 +7,7 @@ tooltip:
   en_us: Deletes unused room names from key schedule
 
 author: sssenya
+help_url: "https://wiki.a101.ru/pages/viewpage.action?pageId=9210796"
 
 min_revit_version: 2020
 max_revit_version: 2024
