Удалены лишние декораторы, добавлена ссылка на wiki

--- a/АР.tab/РД.panel/Отделка пола.pushbutton/bundle.yaml
+++ b/АР.tab/РД.panel/Отделка пола.pushbutton/bundle.yaml
@@ -25,5 +25,7 @@ context: active-floor-plan
 
 author: DiBrainz
 
+help_url: https://wiki.a101.ru/pages/viewpage.action?pageId=15827544
+
 min_revit_version: 2020
 max_revit_version: 2024
