--- a/АР.tab/Документация.panel/Копировать спецификации.invokebutton/bundle.yaml
+++ b/АР.tab/Документация.panel/Копировать спецификации.invokebutton/bundle.yaml
@@ -13,7 +13,7 @@ assembly: RevitArchitecturalDocumentation.dll
 command_class: RevitCopySpecSheetInstanceCommand
 
 author: DivinN
-help_url: "https://wiki.a101.ru/pages/viewpage.action?pageId=9211109"
+help_url: "https://kb.a101.ru/pages/viewpage.action?pageId=124914529"
 
 min_revit_version: 2020
 max_revit_version: 2024
