--- a/АР.tab/Документация.panel/Создать для ПСО и ДДУ.invokebutton/bundle.yaml
+++ b/АР.tab/Документация.panel/Создать для ПСО и ДДУ.invokebutton/bundle.yaml
@@ -13,7 +13,7 @@ assembly: RevitArchitecturalDocumentation.dll
 command_class: RevitCreatingARDocsCommand
 
 author: DivinN
-help_url: "https://wiki.a101.ru/pages/viewpage.action?pageId=9211133"
+help_url: "https://kb.a101.ru/pages/viewpage.action?pageId=124914441"
 
 min_revit_version: 2020
 max_revit_version: 2024
