--- a/АР.tab/Квартирография.panel/Нумераторы.pulldown/Нумератор по линии.pushbutton/bundle.yaml
+++ b/АР.tab/Квартирография.panel/Нумераторы.pulldown/Нумератор по линии.pushbutton/bundle.yaml
@@ -13,7 +13,7 @@ tooltip:
   en_us: Numbers rooms and parking according to the selected line.
 
 author: dosymep
-help_url: "https://wiki.a101.ru/pages/viewpage.action?pageId=9210796"
+help_url: "https://kb.a101.ru/pages/viewpage.action?pageId=67841778"
 
 min_revit_version: 2020
 max_revit_version: 2024
