--- a/АР.tab/Квартирография.panel/Нумераторы.pulldown/Нумератор помещений и групп.invokebutton/bundle.yaml
+++ b/АР.tab/Квартирография.panel/Нумераторы.pulldown/Нумератор помещений и групп.invokebutton/bundle.yaml
@@ -16,7 +16,7 @@ assembly: RevitRooms.dll
 command_class: RoomsNumsCommand
 
 author: dosymep
-help_url: "https://wiki.a101.ru/pages/viewpage.action?pageId=9210796"
+help_url: "https://kb.a101.ru/pages/viewpage.action?pageId=67841778"
 
 min_revit_version: 2020
 max_revit_version: 2024
