--- a/АР.tab/Перемычки.panel/Перемычки.stack/Навигатор.invokebutton/bundle.yaml
+++ b/АР.tab/Перемычки.panel/Перемычки.stack/Навигатор.invokebutton/bundle.yaml
@@ -9,7 +9,7 @@ tooltip:
 assembly: RevitLintelPlacement.dll
 command_class: ViewLintelsCommand
 
-help_url: "https://wiki.a101.ru/pages/viewpage.action?pageId=9211053"
+help_url: "https://kb.a101.ru/pages/viewpage.action?pageId=67841780"
 
 min_revit_version: 2020
 max_revit_version: 2024
