--- a/АР.tab/Прочее.panel/Прочее.pulldown/Создать виды для ДДУ.pushbutton/bundle.yaml
+++ b/АР.tab/Прочее.panel/Прочее.pulldown/Создать виды для ДДУ.pushbutton/bundle.yaml
@@ -7,7 +7,7 @@ tooltip:
   en_us: Create views for Equity Participation Agreement. Select the views in the manager that will be copied and run the plugin.
 
 author: DivinN
-help_url: "https://wiki.a101.ru/pages/viewpage.action?pageId=9210867"
+help_url: "https://kb.a101.ru/pages/viewpage.action?pageId=110562539"
 
 min_revit_version: 2022
 max_revit_version: 2024
