--- a/АР.tab/РД.panel/Отделка пола.pushbutton/bundle.yaml
+++ b/АР.tab/РД.panel/Отделка пола.pushbutton/bundle.yaml
@@ -24,9 +24,8 @@ tooltip:
 context: active-floor-plan
 
 author: DiBrainz
-help_url: "https://wiki.a101.ru/pages/viewpage.action?pageId=9210991"
+help_url: "https://kb.a101.ru/pages/viewpage.action?pageId=134086804"
 
-help_url: https://wiki.a101.ru/pages/viewpage.action?pageId=15827544
 
 min_revit_version: 2020
 max_revit_version: 2024
