--- a/АР.tab/Рабочие наборы.panel/КЖ Скрыть ненужные.pushbutton/bundle.yaml
+++ b/АР.tab/Рабочие наборы.panel/КЖ Скрыть ненужные.pushbutton/bundle.yaml
@@ -11,7 +11,7 @@ tooltip:
 context: doc-project
 
 author: vlastroG
-help_url: "https://wiki.a101.ru/pages/viewpage.action?pageId=9210789"
+help_url: "https://kb.a101.ru/pages/viewpage.action?pageId=128156261"
 
 min_revit_version: 2020
 max_revit_version: 2024
