--- a/АР.tab/РД.panel/Отделка стен.invokebutton/bundle.yaml
+++ b/АР.tab/РД.panel/Отделка стен.invokebutton/bundle.yaml
@@ -17,5 +17,7 @@ context:
 
 author: vlastroG
 
+help_url: "https://kb.a101.ru/pages/viewpage.action?pageId=134086800"
+
 min_revit_version: 2022
 max_revit_version: 2024
