--- a/АР.tab/РД.panel/Откосы.invokebutton/bundle.yaml
+++ b/АР.tab/РД.panel/Откосы.invokebutton/bundle.yaml
@@ -3,16 +3,27 @@ title:
   en_us: Opening slopes
 
 tooltip:
-  ru: >- 
+  ru: >-
     Расставляет откосы по выбранным окнам
-  en_us: >- 
+    
+    
+    1. Подготовьте типоразмеры откосов
+    
+    2. Запустите скрипт
+
+  en_us: >-
     Places slopes on selected windows
+    
+    
+    1. Prepare types of window slopes
+    
+    2. Run the script
 
 assembly: RevitOpeningSlopes.dll
 command_class: RevitOpeningSlopesCommand
 
 author: DiBrainz
-help_url: "https://wiki.a101.ru/pages/viewpage.action?pageId=15827542"
+help_url: "https://kb.a101.ru/pages/viewpage.action?pageId=134086806"
 
 min_revit_version: 2022
 max_revit_version: 2024
