Переименована кнопка КЖ Скрыть ненужные в Скрыть КЖ

--- a/АР.tab/Рабочие наборы.panel/КЖ Скрыть ненужные.pushbutton/bundle.yaml
+++ b/АР.tab/Рабочие наборы.panel/КЖ Скрыть ненужные.pushbutton/bundle.yaml
@@ -1,8 +1,8 @@
 title:
   ru: >-
-    КЖ Скрыть ненужные
+    Скрыть КЖ
   en_us: >-
-    KJ Hide unwanted
+    Hide KJ
 
 tooltip:
   ru: Закрывает рабочие наборы из связей КР, в которых находятся арматура и вспомогательные элементы.
