--- a/АР.tab/Документация.panel/Планы квартир.invokebutton/bundle.yaml
+++ b/АР.tab/Документация.panel/Планы квартир.invokebutton/bundle.yaml
@@ -32,6 +32,7 @@ assembly: RevitApartmentPlans.dll
 command_class: RevitApartmentPlansCommand
 
 author: vlastroG
+help_url: "https://kb.a101.ru/pages/viewpage.action?pageId=124914407"
 
 min_revit_version: 2022
 max_revit_version: 2024
