Откорректированно наименование кнопки плагина

--- a/АР.tab/Документация.panel/Копирование спецификаций АИ.invokebutton/bundle.yaml
+++ b/АР.tab/Документация.panel/Копирование спецификаций АИ.invokebutton/bundle.yaml
@@ -1,6 +1,6 @@
 title:
-  ru: Копирование спецификаций АИ
-  en_us: Копирование спецификаций АИ
+  ru: "Копирование\nспецификаций АИ"
+  en_us: "Copy AI\nspecifications"
 
 tooltip:
   ru: >- 
