--- a/АР.tab/Документация.panel/Копирование спецификаций АИ.invokebutton/bundle.yaml
+++ b/АР.tab/Документация.panel/Копирование спецификаций АИ.invokebutton/bundle.yaml
@@ -1,6 +1,6 @@
 title:
   ru: "Копирование\nспецификаций АИ"
-  en_us: "Copy AI\nspecifications"
+  en_us: "Copying\ninterior specifications"
 
 tooltip:
   ru: >- 
