--- a/АР.tab/Документация.panel/Копирование спецификаций АИ.invokebutton/bundle.yaml
+++ b/АР.tab/Документация.panel/Копирование спецификаций АИ.invokebutton/bundle.yaml
@@ -14,6 +14,7 @@ assembly: RevitCopyInteriorSpecs.dll
 command_class: RevitCopyInteriorSpecsCommand
 
 author: DivinN
+help_url: "https://kb.a101.ru/pages/viewpage.action?pageId=145330340"
 
 min_revit_version: 2022
 max_revit_version: 2024
